Check if ShardingState::get(serviceContext) is null at shutdown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-11-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If setUpSharding() somehow has not been called, e.g. blocked by setUpReplication due to network issues, ShardingState is not created on the service context, and if the server is shut down by SIGTERM, it will hit SEGFAULT.

            Assignee:
            Wei Hu
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: