SERVER-113040 Check if ShardingState::get(serviceContext) is null at shutdown (#43216)

GitOrigin-RevId: b8a1661248b80cda456ad19ffc42c5429e6af66c